src/ui/changelog/tests/snapshots/ppoker__ui__changelog__tests__changelog_filtering_filtered.snap
---
source: src/ui/changelog/tests/mod.rs
expression: terminal.backend()
---
"                                                                                "
"[1.0.0]                                                                         "
"                                                                                "
"Major Features                                                                  "
"* Feature A                                                                     "
"* Feature B                                                                     "
"* Feature C                                                                     "
"                                                                                "
"Bug Fixes                                                                       "
"* Fix A                                                                         "
"* Fix B                                                                         "
"* Fix C                                                                         "
"────────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" Vote | ↑ | ↓ | Toggle filter | Quit                                            "
"                                                                                "
