src/ui/changelog/tests/snapshots/ppoker__ui__changelog__tests__changelog_filtering_full.snap
---
source: src/ui/changelog/tests/mod.rs
expression: terminal.backend()
---
"                                                                               ↑"
"[1.0.0]                                                                        █"
"                                                                               █"
"Major Features                                                                 █"
"* Feature A                                                                    █"
"* Feature B                                                                    █"
"* Feature C                                                                    █"
"                                                                               █"
"Bug Fixes                                                                      █"
"* Fix A                                                                        █"
"* Fix B                                                                        █"
"* Fix C                                                                        █"
"                                                                               █"
"[0.9.0]                                                                        █"
"                                                                               █"
"Features                                                                       █"
"* Feature 1                                                                    █"
"* Feature 2                                                                    █"
"* Feature 3                                                                    █"
"                                                                               ║"
"Bug Fixes                                                                      ║"
"* Fix 1                                                                        ║"
"* Fix 2                                                                        ║"
"* Fix 3                                                                        ║"
"                                                                               ║"
"[0.8.0]                                                                        ║"
"                                                                               ↓"
"                                                                                "
" Vote | ↑ | ↓ | Toggle filter | Quit                                            "
"                                                                                "
