src/ui/changelog/tests/snapshots/ppoker__ui__changelog__tests__changelog_page.snap
---
source: src/ui/changelog/tests/mod.rs
expression: terminal.backend()
---
"                                                                                "
"[0.5.0]                                                                         "
"                                                                                "
"Features                                                                        "
"* Feature 1                                                                     "
"* Feature 2                                                                     "
"                                                                                "
"Bug Fixes                                                                       "
"* Fix 1                                                                         "
"* Fix 2                                                                         "
"────────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" Vote | ↑ | ↓ | Quit                                                            "
"                                                                                "
