src/ui/changelog/tests/snapshots/ppoker__ui__changelog__tests__changelog_scrolling_down_3.snap
---
source: src/ui/changelog/tests/mod.rs
expression: terminal.backend()
---
"Major Features                                                                 ↑"
"* Feature A                                                                    ║"
"* Feature B                                                                    █"
"* Feature C                                                                    █"
"* Feature D                                                                    █"
"* Feature E                                                                    █"
"                                                                               █"
"Bug Fixes                                                                      █"
"* Fix A                                                                        █"
"* Fix B                                                                        █"
"* Fix C                                                                        █"
"* Fix D                                                                        █"
"* Fix E                                                                        ║"
"                                                                               ║"
"[0.9.0]                                                                        ║"
"                                                                               ║"
"Features                                                                       ║"
"* Feature 1                                                                    ║"
"* Feature 2                                                                    ║"
"* Feature 3                                                                    ║"
"* Feature 4                                                                    ║"
"* Feature 5                                                                    ║"
"                                                                               ║"
"Bug Fixes                                                                      ║"
"* Fix 1                                                                        ║"
"* Fix 2                                                                        ║"
"* Fix 3                                                                        ↓"
"                                                                                "
" Vote | ↑ | ↓ | Quit                                                            "
"                                                                                "
