src/ui/changelog/tests/snapshots/ppoker__ui__changelog__tests__changelog_scrolling_page_up.snap
---
source: src/ui/changelog/tests/mod.rs
expression: terminal.backend()
---
"                                                                               ↑"
"[1.0.0]                                                                        █"
"                                                                               █"
"Major Features                                                                 █"
"* Feature A                                                                    █"
"* Feature B                                                                    █"
"* Feature C                                                                    █"
"* Feature D                                                                    █"
"* Feature E                                                                    █"
"                                                                               █"
"Bug Fixes                                                                      █"
"* Fix A                                                                        ║"
"* Fix B                                                                        ║"
"* Fix C                                                                        ║"
"* Fix D                                                                        ║"
"* Fix E                                                                        ║"
"                                                                               ║"
"[0.9.0]                                                                        ║"
"                                                                               ║"
"Features                                                                       ║"
"* Feature 1                                                                    ║"
"* Feature 2                                                                    ║"
"* Feature 3                                                                    ║"
"* Feature 4                                                                    ║"
"* Feature 5                                                                    ║"
"                                                                               ║"
"Bug Fixes                                                                      ↓"
"                                                                                "
" Vote | ↑ | ↓ | Quit                                                            "
"                                                                                "
