src/ui/changelog/tests/snapshots/ppoker__ui__changelog__tests__changelog_scrolling_past_bottom.snap
---
source: src/ui/changelog/tests/mod.rs
expression: terminal.backend()
---
"* Another Feature 5                                                            ↑"
"                                                                               ║"
"Bug Fixes                                                                      ║"
"* Another Fix 1                                                                ║"
"* Another Fix 2                                                                ║"
"* Another Fix 3                                                                ║"
"* Another Fix 4                                                                ║"
"* Another Fix 5                                                                ║"
"                                                                               ║"
"[0.7.0]                                                                        ║"
"                                                                               ║"
"Features                                                                       ║"
"* More Feature 1                                                               ║"
"* More Feature 2                                                               ║"
"* More Feature 3                                                               ║"
"* More Feature 4                                                               ║"
"* More Feature 5                                                               █"
"                                                                               █"
"Bug Fixes                                                                      █"
"* More Fix 1                                                                   █"
"* More Fix 2                                                                   █"
"* More Fix 3                                                                   █"
"* More Fix 4                                                                   █"
"* More Fix 5                                                                   █"
"───────────────────────────────────────────────────────────────────────────────█"
"                                                                               █"
"                                                                               ↓"
"                                                                                "
" Vote | ↑ | ↓ | Quit                                                            "
"                                                                                "
